Support AccessibilityNodeInfo.getHintText on Android.

For any HTML element that had both primary and secondary accessible text
(name and description), such as a form control with both a label and
a placeholder, or a link with both link text and a title tooltip,
previously we had to stuff those into the same field. Now Android allows
us to split them into the main text and a separate "hint" field, which we
can now use for all secondary text.

For example, <input aria-label="Phone" placeholder="xxx-xxxx">

Previous: GetText -> "Phone xxx-xxxx"
New: GetText -> "Phone"
     GetHintText -> "xxx-xxxx"

Bug: 707194
Change-Id: I63e449b418ae4aa8a880feca949c0b7349fff582