content/browser/accessibility/browser_accessibility_android.cc
@@ -353,25 +353,11 @@ base::string16 BrowserAccessibilityAndroid::GetText() const {
     return base::string16();
   }
 
-  // We can only expose one accessible name on Android,
-  // not 2 or 3 like on Windows or Mac.
-
   // First, always return the |value| attribute if this is an
   // input field.
   base::string16 value = GetValue();
-  if (!value.empty()) {
-    if (HasState(ui::AX_STATE_EDITABLE))
-      return value;
-
-    switch (GetRole()) {
-      case ui::AX_ROLE_COMBO_BOX:
-      case ui::AX_ROLE_POP_UP_BUTTON:
-      case ui::AX_ROLE_TEXT_FIELD:
-        return value;
-      default:
-        break;
-    }
-  }
+  if (!value.empty() && ShouldExposeValueAsName())
+    return value;
 
   // For color wells, the color is stored in separate attributes.
   // Perhaps we could return color names in the future?
@@ -386,13 +372,6 @@ base::string16 BrowserAccessibilityAndroid::GetText() const {
   }
 
   base::string16 text = GetString16Attribute(ui::AX_ATTR_NAME);
-  base::string16 description = GetString16Attribute(ui::AX_ATTR_DESCRIPTION);
-  if (!description.empty()) {
-    if (!text.empty())
-      text += base::ASCIIToUTF16(" ");
-    text += description;
-  }
-
   if (text.empty())
     text = value;
 
@@ -420,6 +399,22 @@ base::string16 BrowserAccessibilityAndroid::GetText() const {
   }
 
   return text;
+}
+
+base::string16 BrowserAccessibilityAndroid::GetHint() const {
+  // If we're returning the value as the main text, then return the
+  // accessible name as the hint.
+  base::string16 value = GetValue();
+  if (!value.empty() && ShouldExposeValueAsName()) {
+    base::string16 name = GetString16Attribute(ui::AX_ATTR_NAME);
+    base::string16 description = GetString16Attribute(ui::AX_ATTR_NAME);
+    if (!name.empty() && !description.empty())
+      return name + base::ASCIIToUTF16(" ") + description;
+    else if (!name.empty())
+      return name;
+  }
+
+  return GetString16Attribute(ui::AX_ATTR_DESCRIPTION);
 }
 
 base::string16 BrowserAccessibilityAndroid::GetRoleDescription() const {
@@ -1375,6 +1370,22 @@ bool BrowserAccessibilityAndroid::HasOnlyTextAndImageChildren() const {
 bool BrowserAccessibilityAndroid::IsIframe() const {
   return (GetRole() == ui::AX_ROLE_IFRAME ||
           GetRole() == ui::AX_ROLE_IFRAME_PRESENTATIONAL);
+}
+
+bool BrowserAccessibilityAndroid::ShouldExposeValueAsName() const {
+  if (HasState(ui::AX_STATE_EDITABLE))
+    return true;
+
+  switch (GetRole()) {
+    case ui::AX_ROLE_COMBO_BOX:
+    case ui::AX_ROLE_POP_UP_BUTTON:
+    case ui::AX_ROLE_TEXT_FIELD:
+      return true;
+    default:
+      break;
+  }
+
+  return false;
 }
 
 void BrowserAccessibilityAndroid::OnDataChanged() {
