content/browser/accessibility/browser_accessibility_android.h
@@ -75,6 +75,7 @@ class CONTENT_EXPORT BrowserAccessibilityAndroid : public BrowserAccessibility {
 
   const char* GetClassName() const;
   base::string16 GetText() const override;
+  base::string16 GetHint() const;
 
   base::string16 GetRoleDescription() const;
 
@@ -150,6 +151,7 @@ class CONTENT_EXPORT BrowserAccessibilityAndroid : public BrowserAccessibility {
   bool HasOnlyTextChildren() const;
   bool HasOnlyTextAndImageChildren() const;
   bool IsIframe() const;
+  bool ShouldExposeValueAsName() const;
 
   void NotifyLiveRegionUpdate(base::string16& aria_live);
 
