content/public/android/java/src/org/chromium/content/browser/accessibility/OWebContentsAccessibility.java
@@ -43,6 +43,15 @@ public class OWebContentsAccessibility extends LollipopWebContentsAccessibility 
     }
 
     @Override
+    protected void setAccessibilityNodeInfoKitKatAttributes(AccessibilityNodeInfo node,
+            boolean isRoot, boolean isEditableText, String roleDescription, String hint,
+            int selectionStartIndex, int selectionEndIndex) {
+        super.setAccessibilityNodeInfoKitKatAttributes(node, isRoot, isEditableText,
+                roleDescription, hint, selectionStartIndex, selectionEndIndex);
+        node.setHintText(hint);
+    }
+
+    @Override
     public void addExtraDataToAccessibilityNodeInfo(
             int virtualViewId, AccessibilityNodeInfo info, String extraDataKey, Bundle arguments) {
         if (!extraDataKey.equals(EXTRA_DATA_TEXT_CHARACTER_LOCATION_KEY)) return;
