content/browser/accessibility/dump_accessibility_tree_browsertest.cc
@@ -227,6 +227,12 @@ void DumpAccessibilityTreeTest::AddDefaultFilters(
   AddFilter(filters, "roleDescription=*");
 
   //
+  // Android
+  //
+
+  AddFilter(filters, "hint=*");
+
+  //
   // General
   //
 
